Include jobs in search results
