# lib/api-spec/openapi.yaml
@@ -807,7 +807,7 @@ components:
 
     SearchResults:
       type: object
-      required: [users, posts, societies]
+      required: [users, posts, societies, jobs]
       properties:
         users:
           type: array
@@ -818,6 +818,9 @@ components:
         societies:
           type: array
           items: { $ref: "#/components/schemas/Society" }
+        jobs:
+          type: array
+          items: { $ref: "#/components/schemas/Job" }
 
     UploadUrlRequest:
       type: object
@@ -854,7 +857,4 @@ components:
       properties:
         error:
           type: string
-
-
-
 
